--- a/package.json
+++ b/package.json
@@ -55,7 +55,11 @@
   },
   "dependencies": {
     "@jupyterlab/application": "^3.6.4",
-    "@jupyterlab/apputils": "^3.6.4"
+    "@jupyterlab/apputils": "^3.6.4",
+    "@jupyterlab/coreutils": "^5.6.4",
+    "@jupyterlab/rendermime-interfaces": "^3.6.4",
+    "@jupyterlab/services": "^6.6.4",
+    "@lumino/widgets": "^1.37.2"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.1.0",
