--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,19 @@
     //"declaration": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
-    "lib": ["es2015", "dom"],
+    "lib": ["es2018", "dom"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noEmitOnError": true,
     "noUnusedLocals": true,
     "outDir": "lib",
+    "paths": {
+      "@lumino/widgets": ["./node_modules/@lumino/widgets"]
+    },
     "rootDir": "src",
     "strict": true,
     "strictNullChecks": false,
-    "target": "es6",
+    "target": "es2018",
     "types": []
   },
   "include": ["src/*"]
