--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "che-sidebar-visibility-jupyter-extension",
+  "name": "@maap-jupyterlab/che-sidebar-visibility-jupyter-extension",
   "version": "1.0.0",
   "description": "A Jupyter extension that provides users the ability to hide the Eclipse Che sidebar in the MAAP ADE.",
   "keywords": [
